[project]
name = "ChemDist_paper"
version = "0.1.0"  # or whatever version is appropriate
authors = [
    {name = ", email = "data2scale@gmail.com"},
]
license = {text = "Apache2.0"}
dependencies = []
requires-python = ">=3.11"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
